# litestar-start

./: .geminiignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEVELOPMENT.md  GEMINI.md  Makefile  README.md  pyproject.toml
.agent/: beads.json  index.md  patterns.md  prds.md  product-guidelines.md  product.md  setup-state.json  tech-stack.md  tracks.md
.agent/archive/plugin-template-rendering-fix_20260125/: learnings.md  metadata.json  plan.md  spec.md
.agent/archive/refine-cli-structure-and-improve-plugin-discovery-logic/: plan.md
.agent/specs/plugin-template-rendering-fix_20260125/: index.md  plan.md
.agent/specs/refine-cli-structure-and-improve-plugin-discovery-logic/: index.md  learnings.md  metadata.json  plan.md  spec.md
.github/workflows/: lint.yml  python-publish.yml
docs/: TEMPLATE_SYSTEM.md
litestar_start/: cli.py  generator.py
litestar_start/Litestar/: generator.py
litestar_start/Litestar/Base/app/: main.py.jinja
litestar_start/Litestar/Containers/: Dockerfile.jinja  docker-compose.infra.yml.jinja
litestar_start/Litestar/Plugins/JWT/Templates/auth/: __init__.py.jinja  schemas.py.jinja
litestar_start/Litestar/Plugins/SQLAlchemy/Templates/db/: __init__.py.jinja  config.py.jinja
litestar_start/docs/: ARCHITECTURE.md
src/: __init__.py  cli.py  generator.py  models.py  utils.py
src/Litestar/: generator.py
src/Litestar/App/: __main__.py.jinja  app.py.jinja  config.py.jinja  main.py.jinja  settings.py.jinja
src/Litestar/App/controllers/: users.py.jinja
src/Litestar/App/lib/: __init__.py.jinja  utils.py.jinja
src/Litestar/App/schemas/: users.py.jinja
src/Litestar/Base/app/: config.py.jinja
src/Litestar/Config/: .env.example.jinja  .gitignore.jinja  Makefile.jinja  README.md.jinja  pyproject.toml.jinja
src/Litestar/Containers/: Dockerfile.jinja  docker-compose.infra.yml.jinja  docker-compose.yml.jinja
src/Litestar/Plugins/AdvancedAlchemy/Templates/lib/: __init__.py.jinja  dependencies.py.jinja
src/Litestar/Plugins/AdvancedAlchemy/Templates/models/: users.py.jinja
src/Litestar/Plugins/JWT/: __init__.py
src/Litestar/Plugins/JWT/Templates/auth/: guards.py.jinja
src/Litestar/Plugins/SQLAlchemy/: __init__.py
src/Litestar/Plugins/SQLAlchemy/Templates/db/: models.py.jinja
src/Litestar/app/: main.py.jinja
src/docs/: ARCHITECTURE.md
src/litestar_start/: __init__.py  cli.py  generator.py
src/litestar_start/backends/: __init__.py  base.py
src/litestar_start/backends/fastapi/: __init__.py  generator.py
src/litestar_start/backends/fastapi/plugins/: __init__.py  sqlalchemy.py
src/litestar_start/backends/fastapi/templates/: gitignore.jinja  pyproject.toml.jinja
src/litestar_start/backends/fastapi/templates/api/: routes.py.jinja
src/litestar_start/backends/fastapi/templates/app/: config.py.jinja  main.py.jinja
src/litestar_start/backends/litestar/: __init__.py  generator.py
src/litestar_start/backends/litestar/plugins/: __init__.py  sqlalchemy.py
src/litestar_start/backends/litestar/templates/: gitignore.jinja  pyproject.toml.jinja
src/litestar_start/backends/litestar/templates/app/: __init__.py.jinja  config.py.jinja  main.py.jinja
src/litestar_start/backends/litestar/templates/controllers/: __init__.py.jinja  base.py.jinja
src/litestar_start/backends/templates/: .dockerignore  .gitignore  Dockerfile  README.md
src/litestar_start/backends/templates/tests/: conftest.py  test_main.py
src/litestar_start/core/: __init__.py  base.py  config.py  context.py  merger.py  plugin.py  renderer.py  templates.py  utils.py
src/litestar_start/core/templates/base/: env.example.jinja  gitignore.jinja  readme.md.jinja
src/litestar_start/core/templates/macros/: javascript.jinja  python.jinja
src/litestar_start/frontends/: __init__.py  base.py
src/litestar_start/frontends/react/: __init__.py  generator.py
src/litestar_start/frontends/templates/: .dockerignore  .env.example  .eslintrc.json  .gitignore  .prettierrc  Dockerfile  README.md  nginx.conf
src/litestar_start/generators/: __init__.py  loader.py  project.py  registry.py
src/litestar_start/generators/templates/: .env.example  README.md  docker-compose.yml
src/litestar_start/generators/templates/.github/workflows/: backend.yml  frontend.yml
tests/: test_generator.py  test_plugin.py
tests/templates/: __init__.py  conftest.py  test_context.py  test_fastapi_templates.py  test_litestar_templates.py  test_template_loader.py
tools/: prepare_release.py
