[project]
authors = [{ name = "Harshal Laheri", email = "harshal@harshallaheri.me" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
]
dependencies = ["questionary>=2.1.1", "rich>=14.2.0", "jinja2>=3.1.6", "msgspec>=0.20.0"]
description = "Interactive CLI to scaffold fullstack projects with modular choices"
keywords = ["litestar", "scaffolding", "cli", "fullstack", "template", "generator"]
license = "MIT"
name = "litestar-start"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0a6"

[project.scripts]
litestar-start = "litestar_start.cli:main"

[project.urls]
Documentation = "https://github.com/Harshal6927/litestar-start#readme"
Issues = "https://github.com/Harshal6927/litestar-start/issues"
Source = "https://github.com/Harshal6927/litestar-start"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["litestar_start"]

[tool.hatch.build.targets.sdist]
include = ["litestar_start"]

[tool.ruff]
line-length = 120
lint.ignore = [
    "CPY001",  # Missing copyright notice
    "D100",    # Undocumented public module
    "D203",    # One blank line required before class docstring (conflicts with D211)
    "D213",    # Multi-line docstring summary should start at the second line (conflicts with D212)
    "PLC0415", # Import outside top level
    "PLR0911", # Too many return statements
]

[dependency-groups]
dev = ["pre-commit>=4.5.1", "ruff>=0.14.11"]
